# polygon

./: .clang-format  .gitignore  .~lock.Лаба 5 отчет.docx#  0hw.cpp  1. Bubble Sort.cpp  1..hard-.cpp  1.cpp  10.cpp  115_leetcode.cpp  1_Kirpo_Timofey  1_igor_dvoretskov  1ex.cpp  1h+.cpp  1hw.cpp  1lab  2  2. Heap sort.cpp  2.cpp  2.medium.cpp  2_Chukachev_Grigoriy_J3110_лаба1  2_J3110_Виктор_Васькин_1Лаба  2_Tiucov_daniil_Lab5  2_lab-4_Tiucov_Daniil  2_lab.cpp  2_strinadkina_polina  2_zarayskaya_yana_J3110_lab0.cpp  2_Даниил Тиуков_Лаба№2  2_Даниил_Тиуков_#Проверить массив  2_Чукачев_Григорий_J3110_лаба0  2ex.cpp  2h+.cpp  2hw.cpp  3. Bucket sort.cpp  3.cpp  3.hard.cpp  3112_Kocherova_Anastasia_#2  3_Anna_Bondarenko_lab2  3_Elena_Lutsenko_#1  3_Elena_Lutsenko_1.cpp  3_Taryanik_Anton_#lab1_hard_task8_level  (+740 more)
0hw/: 0hw.cpp
1hw/: 1hw.cpp
2hw/: 2hw.cpp  CMakeLists.txt
3hw/: 3hw.cpp  CMakeLists.txt  report.docx
4hw/: CMakeLists.txt  binary_insertion_sort.cpp  binary_insertion_sort.h  binary_insertion_sort.txt  counting sort.cpp  counting sort.h  counting_sort.cpp  counting_sort.h  execute_sort.cpp  smooth_sort.cpp  smooth_sort.h  smooth_sort_1e3_1e6.txt
5hw/: report.docx
Algorithms/: Sort.cpp  Sort.h
BeadSort/: BeadSort.cpp
CombSort/: CombSort.cpp
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln
Lab-0/: main.cpp
Lab-1/: Lab-1.sln  lab-1.cpp  main.cpp
Lab-2/: Lab-2.sln  lab-2.cpp  test.txt
Lab-3/: Lab-3.sln
Lab-4/: 4 lab.py  answer.txt  lab-4.cpp  test.txt  Отчёт_Лабораторная_4.docx
Lab-5/: 5 lab.py
Lab-6/: 6 lab.py
Lab-7/: 7 lab.py  lab-7.cpp
Lab0/: median.cpp
Lab1/: label_encoder.cpp
Lab2/: label_encoder.cpp
Lab3/: main.cpp  shuffle.cpp
Lab4/: bad_clusterization.cpp
Lab5/: sorting_algorithms.cpp
Lab6/: frog_jump.cpp
Lab_02/: Lab_02.cpp  Lab_02.sln  Lab_02.vcxproj  Lab_02.vcxproj.filters  input.txt
Lab_03/: Lab_03.cpp  Lab_03.sln  Lab_03.vcxproj  Lab_03.vcxproj.filters
Lab_1/: CountVectorizer.cpp  CountVectorizer.h  TestCV.cpp  TestCV.h
Laba3/: hhh.txt  main.cpp
PyramidHeapSort/: PyramidHeapSort.cpp
Tests/: Test.cpp  Test.h  TestSort.cpp  TestSort.h
TreeSort/: TreeSort.cpp
Utils/: LCG.cpp  LCG.h  Timer.cpp  Timer.h
algorithms/: algorithms.h  comb_sort.cpp  iterative_permutation_sort.cpp  main.cpp  tree_sort.cpp
cmake/: FindCUnit.cmake
imgs/: lab_1  (+4 more)
lab-5/: .gitignore  Bucket-sort.cpp  CMakeLists.txt  J3111_Быстриков_лаб_5.docx  array_generator.cpp  array_generator.py  bubble sort.cpp  bucketInput.txt  bucketOutput.txt  bucketSort.out  bucket_sort.cpp  bustraya.cpp  cocktail_shaker_sort.cpp  comb.cpp  combSort  combSort.out  comb_sort.cpp  grafik1.cpp  heap-sort.cpp  heap_sort.cpp  heap_sort.txt  in_place_merge_sort.cpp  input.txt  lab-5.docx  otchet.cpp  output.txt  pancake-sort.cpp  podcheta.cpp  puzirok.cpp  radix_sort.cpp  shell_sort.cpp  src.cpp  test.cpp  test.txt  timsort.cpp  unit.cpp  Трифонов Лабораторная 5.docx  отчет5 лаба.docx
lab-5/output/: 1000.csv  10000.csv  100000.csv  100000_1.csv  100000_10.csv  100000_11.csv  100000_12.csv  100000_13.csv  100000_14.csv  100000_15.csv  100000_16.csv  100000_17.csv  100000_18.csv  100000_19.csv  100000_2.csv  100000_20.csv  100000_21.csv  100000_22.csv  100000_23.csv  100000_24.csv  100000_25.csv  100000_26.csv  100000_27.csv  100000_28.csv  100000_29.csv  100000_3.csv  100000_30.csv  100000_31.csv  100000_32.csv  100000_33.csv  100000_34.csv  100000_35.csv  100000_36.csv  100000_37.csv  100000_38.csv  100000_39.csv  100000_4.csv  100000_40.csv  100000_41.csv  100000_42.csv  (+305 more)
lab-5/report/: J3110_Ковров_лаб_5.docx  ~$110_Ковров_лаб_5.docx  ~WRL0005.tmp
laboratory/lab_5/: CMakeLists.txt  sorting.cpp  sorting.h  unit_test.cpp
test/: CMakeLists.txt  test_bucket_sort.cpp  test_comb_sort.cpp  test_heap_sort.cpp
(+762 files in other folders)
